# libfall4c

./: .gitignore  CMakeLists.txt  COMPILING  Makefile  Makefile.am  arbres_binaires.c  arbres_binaires.h  array_associative.c  array_associative.h  build.sh  collision.c  collision.h  configure.ac  ctype_extended.c  ctype_extended.h  dependencies.txt  diffs.diff  file.c  file.h  fileBrowse.c  fileBrowse.h  geometry_space.c  geometry_space.h  list.c  list.h  list_old.c  list_old.h  listes_doubles.c  listes_doubles.h  math_basic.c  pathfinding.c  pathfinding.h  queue.c  queue.h  stack.c  stack.h  string.c  string.h  string_manipulation.c  strtok_r.c  (+7 more)
inc/: convert.h  ctype_extended.h  escape.h  fall4c.h  file.h  file_browse.h  filemap.h  filemap_internal.h  graph.h  os_socket.h  pathfinding.h  reed_solomon.h  sockets_wrap.h  string_ext.h
inc/data/: array_associative.h  array_manipulation.h  bytes.h  cache.h  data_ops.h  dictionnary.h  hashtable.h  list.h  queue.h  stack.h  tree_avl.h  tree_binary.h  tree_common.h  wordlist.h
inc/math/: bases.h  dl.h  geometry_space.h  interpolation.h  math_basic.h  math_complex_numbers.h  math_ext.h  math_matrix.h  math_probability.h  math_sequence.h  math_trigonometry.h  vector_space.h
inc/util/: debug.h  errors.h
src/: Makefile  Makefile.am  array_associative.c  collision.c  collision.h  convert.c  ctype_extended.c  ctype_extended.h  debug.c  dictionnary.c  dictionnary.h  escape.c  fall4c.h  file.c  file.h  fileBrowse.h  file_browse.c  filemap.c  list.c  list.h  pathfinding.c  pathfinding.h  queue.h  reed_solomon.c  sockets_wrap.c  stack.c  stack.h  string_ext.c  string_ext.h  tree_avl.c  tree_binary.c  tree_binary.h  tree_common.c  tree_redblack.c
src/data/: Makefile  array_associative.c  array_associative.h  array_manipulation.c  array_manipulation.h  bytes.c  cache.c  data_ops.c  dictionnary.c  dictionnary.h  dictionnary_example.c  dictionnary_mod.c  dictionnary_mod.h  hashtable.c  list.c  list.h  queue.c  queue.h  stack.c  stack.h  tree_avl.c  tree_avl.h  tree_binary.c  tree_binary.h  tree_binary_mod.c  tree_common.c  tree_common.h  tree_common_mod.h  wordlist.c  wordlist_example.c
src/math/: Makefile  bases.c  bases.h  dl.c  geometry_space.c  geometry_space.h  interpolation.c  math_basic.c  math_basic.h  math_complex_numbers.c  math_complex_numbers.h  math_ext.c  math_matrix.c  math_matrix.h  math_probability.c  math_sequence.c  math_sequence.h  math_trigonometry.c  math_trigonometry.h  vector_space.c
src/util/: Makefile  debug.c  debug.h  errors.c  errors.h
tests/: avl_tree.c  binstr_to_bin.c  hexstr_to_bin.c  htable_test.c
