ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libfall4c.la
libfall4c_la_SOURCES =	ctype_extended.c	\
						file.c				\
						fileBrowse.c		\
						list.c				\
						#pathfinding.c		\
						queue.c				\
						stack.c				\
						string.c			\
						tree_avl.c			\
						tree_binary.c		\
include_ladir = ${includedir}/libfall4c
libfall4c_ladir = ${top_builddir}/build/lib/
libfall4c_la_HEADERS = queue.h stack.h
