lib_LTLIBRARIES = libfall4c.la
libfall4c_la_SOURCES =	ctype_extended.c	\
						dictionnary.c		\
						file.c				\
						fileBrowse.c		\
						list.c				\
						#pathfinding.c		\
						queue.c				\
						stack.c				\
						string_ext.c     	\
						tree_avl.c			\
						tree_binary.c		\
						tree_common.c
include_ladir = ${includedir}/libfall4c
libfall4c_ladir = ${top_builddir}/build/lib/
libfall4c_la_HEADERS = fall4c.h
libfall4c_la_LDFLAGS = -lm
